k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: sistema-hospitalar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          # Minikube/local: sistema-hospitalar-api:local
          # GHCR (APSilvaADMG): ghcr.io/apsilvaadmg/sistema-hospitalar-api:latest
          image: ghcr.io/apsilvaadmg/sistema-hospitalar-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: sistema-hospitalar
spec:
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
