k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: sistema-hospitalar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          # Minikube/local: sistema-hospitalar-web:local
          # GHCR (APSilvaADMG): ghcr.io/apsilvaadmg/sistema-hospitalar-web:latest
          image: ghcr.io/apsilvaadmg/sistema-hospitalar-web:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: sistema-hospitalar
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30173
